##Text encoding: utf-8

2015-01-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/arrows/retrosynthesis.cc:

2015-01-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/3d/gchem3d.appdata.xml.in: fixed typos.
	* programs/calc/gchemcalc.appdata.xml.in: ditto.
	* programs/crystal/gcrystal.appdata.xml.in: ditto.
	* programs/paint/gchempaint.appdata.xml.in: ditto.
	* programs/spectra/gspectrum.appdata.xml.in: ditto.
	* programs/table/gchemtable.appdata.xml.in: ditto.

2014-11-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: clean Tools code from.
	* libs/gcp/tools.cc: ditto.
	* libs/gcp/tools.h: ditto.
	* plugins/paint/arrows/looptool.cc: some work on Drag().
	* plugins/paint/arrows/looptool.h: ditto.
	* ui/paint/tools.ui: clean Tools code from.

2014-10-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/arc.cc: fix bounds.
	* libs/gcp/widgetdata.cc: fix an object bounds evaluation issue.
	* libs/gcp/widgetdata.h: ditto.
	* plugins/paint/arrows/looptool.cc: implement OnClicked().

2014-09-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/text/equation.cc: fix serialization.

2014-09-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: accept the npapi-sdk package to build the mozilla plugin.

2014-08-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* all: reduce as far as possible gint and gchar uses.

2014-08-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/reference/Makefile.am: fix make clean for recent doxygen.
	* programs/3d/Makefile.am: fix distribution of appdata files.
	* programs/calc/Makefile.am: ditto.
	* programs/crystal/Makefile.am: ditto.
	* programs/paint/Makefile.am: ditto.
	* programs/spectra/Makefile.am: ditto.
	* programs/table/Makefile.am: ditto.

2014-08-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/glview.cc: fix rotation. [#42977] (patch from Toni Andjelkovic)
	* libs/gcu/glview.h: ditto.
	* libs/gcugtk/glview.cc: ditto.