@@ -2,7 +2,7 @@
 <!-- Copyright 2014 Jean Brefort <jean.brefort@normalesup.org> -->
 <application>
  <id type="desktop">gchem3d.desktop</id>
- <metadata_license>CC0-1.0</metadata_licence>
+ <metadata_license>CC0-1.0</metadata_license>
  <project_license>GPL-3.0 and GFDL-1.3</project_license>
  <name>GChem3D</name>
  <summary>Display 3D chemical structures</summary>
