@@ -1,5 +1,17 @@
 ##Text encoding: utf-8
 
+2015-01-23  Jean Bréfort  <jean.brefort@normalesup.org>
+	* plugins/paint/atoms/orbital-prop.ui: add support for hybrid orbitals.
+	* plugins/paint/atoms/orbital.cc: ditto.
+	* plugins/paint/atoms/orbital.h: ditto.
+	* plugins/paint/atoms/orbital.ui: ditto.
+	* programs/3d/gchem3d.appdata.xml.in: one more typo.
+	* programs/calc/gchemcalc.appdata.xml.in: ditto.
+	* programs/crystal/gcrystal.appdata.xml.in: ditto.
+	* programs/paint/gchempaint.appdata.xml.in: ditto.
+	* programs/spectra/gspectrum.appdata.xml.in: ditto.
+	* programs/table/gchemtable.appdata.xml.in: ditto.
+
 2015-01-14  Jean Bréfort  <jean.brefort@normalesup.org>
 	* plugins/paint/arrows/retrosynthesis.cc:
 
